fix: scrollbar layout shift, removed rounded full buttons, styled scrollbar

--- a/app/index.css
+++ b/app/index.css
@@ -113,3 +113,18 @@
 		@apply list-none;
 	}
 }
+
+/* width */
+::-webkit-scrollbar {
+	@apply w-2;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	@apply bg-background;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	@apply rounded-full bg-border;
+}
